--- a/index.html
+++ b/index.html
@@ -180,38 +180,38 @@
         	
 	        	<div class="row">
 	        		<div class="col-4 col-sm-4 col-md-2">
-	        			<a href="#" class="client-logo">
-	        				<img src="assets/img/skills/MERN-logo.png" alt="Image" width=125px height=75px>
+	        			<a href="#skills" class="client-logo">
+	        				<img src="assets/img/skills/MERN.png" class="container-fluid" alt="Image" >
 	        			</a>
 	        		</div>
 
 	        		<div class="col-4 col-sm-4 col-md-2"> 
-	        			<a href="#" class="client-logo">
-	        				<img src="assets/img/skills/flask.png" alt="Image" width=125px height=75px>
+	        			<a href="#skills" class="client-logo">
+	        				<img src="assets/img/skills/flask.png" class="container-fluid" alt="Image" >
 	        			</a>
 	        		</div>
 
 	        		<div class="col-4 col-sm-4 col-md-2"> 
-	        			<a href="#" class="client-logo">
-	        				<img src="assets/img/skills/django.png" alt="Image" width=125px height=75px>
+	        			<a href="#skills" class="client-logo">
+	        				<img src="assets/img/skills/django.png" class="container-fluid" alt="Image">
 	        			</a>
 	        		</div>
 
 	        		<div class="col-4 col-sm-4 col-md-2"> 
-	        			<a href="#" class="client-logo">
-	        				<img src="assets/img/skills/docker.webp" alt="Image" width=125px height=75px>
+	        			<a href="#skills" class="client-logo">
+	        				<img src="assets/img/skills/docker.webp" class="container-fluid" alt="Image" >
 	        			</a>
 	        		</div>
 
 	        		<div class="col-4 col-sm-4 col-md-2"> 
-	        			<a href="#" class="client-logo">
-	        				<img src="assets/img/skills/aws.png" alt="Image" width=125px height=75px>
+	        			<a href="#skills" class="client-logo">
+	        				<img src="assets/img/skills/aws.png" class="container-fluid" alt="Image" >
 	        			</a>
 	        		</div>
 
 	        		<div class="col-4 col-sm-4 col-md-2"> 
-	        			<a href="#" class="client-logo">
-	        				<img src="assets/img/skills/jmeter.png" alt="Image" width=125px height=75px>
+	        			<a href="#skills" class="client-logo">
+	        				<img src="assets/img/skills/jmeter.png" class="container-fluid" alt="Image" >
 	        			</a>
 	        		</div>
 	        	</div>
